--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
   <artifactId>calculadora</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <name>calculadora</name>
+  <url>http://maven.apache.org</url>	
+	
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -16,6 +19,11 @@
 	    <scope>test</scope>
 	</dependency>    
   </dependencies>
-  
-  
+	
+<plugin>
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>sonar-maven-plugin</artifactId>
+  <version>2.6</version>
+</plugin>
+	
 </project>
